fix homepage to stretch on full screen height

--- a/app/assets/stylesheets/welcome/home.scss
+++ b/app/assets/stylesheets/welcome/home.scss
@@ -1,14 +1,12 @@
 html, body { height: 100%; }
 
-body section {
-  height: 100%;
+body header {
+  min-height: 10%;
   margin: 0;
-  background: image-url("on_and_on.jpg") no-repeat fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
+}
+body section {
+  height: 90%;
+  margin: 0;
   color: white;
   font-family: 'Helvetica', sans-serif;
 }
@@ -21,9 +19,14 @@ body header h1 {
   margin-left: 20px;
 }
 .home-container { 
-  height: 100%;
+  height: 90%;
   display: flex;
   flex-direction: column;
+  background: image-url("on_and_on.jpg") no-repeat fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .row {
   display: flex;
